--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required (VERSION 2.6)
 project (Sig18)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -Wall -Wextra")
@@ -35,7 +35,7 @@ target_link_libraries(Driver database)
 #target_link_libraries(Query2SQL database)
 
 # Test harness
-add_executable(harness harness.cc)
+add_executable(harness harness.cpp)
 
 ADD_CUSTOM_TARGET(link_target ALL
   COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_CURRENT_SOURCE_DIR}/workloads
